# t2s-eval

./: .gitignore  CITATION.cff  README.md  codemeta.json  pyproject.toml
datasets/: Text2SPARQL_Metrics_Inventory.xlsx
datasets/_streamlit/merged/: merged_all.csv  merged_all.json  merged_ck25.csv  merged_ck25.json  merged_ck26.csv  merged_ck26.json  merged_db25.csv  merged_db25.json  merged_db26.csv  merged_db26.json
datasets/ck25/eval/: AIFB.jsonl  FRANZ.jsonl  IIS-L.jsonl  IIS-Q.jsonl  INFAI.jsonl  LABIC.jsonl  LACODAM.jsonl  MIPT.jsonl  WSE.jsonl
datasets/ck25/results/: ck25-20260429-153052.json
datasets/ck26/eval/: ADFR.jsonl  INFAI-ETI-AND-FRIENDS-A.jsonl  INFAI-ETI-AND-FRIENDS-B.jsonl  INFAI-ETI-AND-FRIENDS-C.jsonl  IRIS.jsonl  LIBER-AI-CLAUDE.jsonl  LIBER-AI-QWEN.jsonl  SPARQL-LLM.jsonl
datasets/ck26/results/: ck26-20260504-110702.json
docs/: index.html
docs/qcan-eval-static/: index.html
docs/text-to-sparql-dashboard/: dashboard.js  index.html
docs/text2sparql-metrics-inventory/: index.html
results_analysis/: ck25-20260429-153052.csv  ck26-20260504-110702.csv  db25-20260429-164041.csv  db26-20260429-174352.csv  experiment_results.md
src/qcan_eval/: calculat_metrics.py  generate_markdown_experiments.py  krippendorff_alpha.py  merge_results_dataset.py  metrics_corr_plots.py  pipeline_core.py  proving_qcan_value.py  text2sparql_mapper.py  web_interface.py  web_interface_static.py
src/t2s_soa/: main.py  metric_plots.py  papers.py  text2sparql_metrics_inventory_generator.py  transform_json_bib_cross.py  transform_json_bib_ss.py  verify_used_ref.py
(+88 files in other folders)
